-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b33
-
sparc
-
solaris
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083414 | emb-9 | Erik Helin | P4 | Resolved | Fixed | b33 |
| JDK-8086485 | 8u65 | Erik Helin | P4 | Resolved | Fixed | b01 |
| JDK-8078166 | 8u60 | Erik Helin | P4 | Resolved | Fixed | b14 |
| JDK-8137662 | emb-8u65 | Unassigned | P4 | Resolved | Fixed | b01 |
| JDK-8079933 | emb-8u60 | Erik Helin | P4 | Resolved | Fixed | team |
This problem had previously been hidden because due to various alignments of heap sizes and generation sizes always made sure that we ended up with a alignment_hint of 4 MB by default, which also happens to be a valid page size.
The bug can be triggered by running:
java -Xms32m -Xmx128m -XX:LargePageSizeInBytes=256m -version
- backported by
-
JDK-8078166 os::commit_memory on Solaris uses aligment_hint as page size
-
- Resolved
-
-
JDK-8079933 os::commit_memory on Solaris uses aligment_hint as page size
-
- Resolved
-
-
JDK-8083414 os::commit_memory on Solaris uses aligment_hint as page size
-
- Resolved
-
-
JDK-8086485 os::commit_memory on Solaris uses aligment_hint as page size
-
- Resolved
-
-
JDK-8137662 os::commit_memory on Solaris uses aligment_hint as page size
-
- Resolved
-
- blocks
-
JDK-8049864 TestParallelHeapSizeFlags fails with unexpected heap size
-
- Resolved
-
- duplicates
-
JDK-8027842 Kitchensink on Solaris gets "Attempt to use MPSS" failed
-
- Closed
-