8049536: os::commit_memory on Solaris uses aligment_hint as page size

Reviewed-by: stefank, tschatzl